# test_workmate

./: .gitignore  README.md  cli.py  csv_parser.py  models.py  pyproject.toml
reports/: base.py  payout.py
tests/: test_parser.py  test_reports.py
